<?xml version="1.0"?>
<package>
  <name>agv2_pc</name>
  <version>0.0.0</version>
  <description>The agv2_pc meta package</description>

  <maintainer email="hakan.gencturk@inovasyonmuhendislik.com">Hakan GENCTURK</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
